# tp2-so-i

./: .gitignore  .gitmodules  CMakeLists.txt  config.json
.github/actions/building/: action.yml
.github/actions/coverage_and_test/: action.yml
.github/workflows/: QAWorkflow.yml
include/: batch.h  command.h  exec.h  jobs.h  monitor.h  pipes.h  prompt.h  redirection.h  signals.h
src/: batch.c  command.c  exec.c  input.txt  jobs.c  main.c  monitor.c  pipes.c  prompt.c  redirection.c  salida.txt  script.txt  signals.c
test/: test_command.c  test_exec.c  test_jobs.c  test_main.c  test_pipes.c
test/include/: test_command.h  test_exec.h  test_jobs.h  test_pipes.h
